<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_HMI_OCV_Data" Id="{878ebaa3-a890-45dd-b4d2-54415f72fbfc}">
    <Declaration><![CDATA[TYPE ST_HMI_OCV_Data :
STRUCT
	sPackCode			: T_PACK_Barcode;
	nPackStatus		: BYTE;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>