<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_CASE_DuplicateUpdateToDBTests" Id="{3857eac7-9641-4b1d-9981-1db0e153c9f7}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CASE_DuplicateUpdateToDBTests EXTENDS TcUnit.FB_TestSuite

VAR
	
	(* In/Out test 01*)		
	stCACData_01 							: ST_CAC_Data;
	
	stProductInstruction_01		: ST_PCM_Status;
	aOCVPackStatus_01			: ARRAY[1..cMAX_OUTER_STATUS_QUEUE] OF ST_OUTER_Status;	(* Outer status array *)
	aOuterStatus_01				: ARRAY[1..cMAX_OUTER_STATUS_QUEUE] OF ST_OUTER_Status;	(* Outer status array *)
	
	stOCVDataDB_01							: ST_DB_OCVDataCtrl;
	stOACDataDB_01							: ST_DB_OACDataCtrl;
	
	stOuterBarcodeDuplicate_01				: ST_RejectItems;
	stOuterDuplicatedPackCodesFound_01		: ST_RejectItems;
	
	stCodeInfo_Pack_01					: ST_CodeInfo;
	stCodeInfo_Intermediate_01			: ST_CodeInfo;
	stCodeInfo_Outer_01					: ST_CodeInfo;
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//==============================================================
//MAIN TESTS
//==============================================================

main01_();]]></ST>
    </Implementation>
    <Folder Name="Main" Id="{55419c59-83dd-4913-878b-4a7493b20790}" />
    <Method Name="main01_" Id="{fdc846eb-e82b-4759-81a7-ecc2f8959859}" FolderPath="Main\">
      <Declaration><![CDATA[METHOD INTERNAL main01_
VAR
	fbCase					: FB_CASE_DuplicateUpdateToDB;
	bIsDuplicateOuter		: BOOL;
	bIsDuplicatePacks		: BOOL;
	

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
//Data initialization
TestInit(stCACData:= stCACData_01, stProductInstruction:= stProductInstruction_01);

//Change some data for test scenario below

	
TcUnit.TEST('main01_');

fbCase(
	bExecute:= TRUE, 
	bUseInterimCodeForValidation:= , 
	aOCVPackStatus:= aOCVPackStatus_01, 
	aOuterStatus:= aOCVPackStatus_01, 
	stOCVDataDB:= stOCVDataDB_01, 
	stOACDataDB:= stOACDataDB_01, 
	stOuterBarcodeDuplicate:=  stOuterBarcodeDuplicate_01, 
	stOuterDuplicatedPackCodesFound:= stOuterDuplicatedPackCodesFound_01, 
	stCodeInfo_Pack:= stCodeInfo_Pack_01, 
	stCodeInfo_Intermediate:= stCodeInfo_Intermediate_01, 
	stCodeInfo_Outer:= stCodeInfo_Outer_01, 
	stCACData:= stCACData_01, 
	bDone=> , 
	bBusy=> , 
	bError=> , 
	nErrorID=> , 
	nOACFilesBlocked=> , 
	nOCVFilesBlocked=> , 
	stDaigOACDataDB=> , 
	stDiagOCVDataDB=> );

	
// AssertEquals_BOOL( Expected	:= ,
// 			 	   Actual	:= , 
// 			 	   Message	:= '');
// 						

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="TestInit" Id="{f39d56e7-1fbb-4d93-a202-53e1e667a959}">
      <Declaration><![CDATA[METHOD PRIVATE TestInit
VAR_IN_OUT
	stProductInstruction	: ST_PCM_Status;
	stCACData 				: ST_CAC_Data;
END_VAR

VAR	
	rTrigDataInit		: R_TRIG;
	bDataInit			: BOOL;
	iOuter				: INT;
	iPack				: INT;
	sPackNum			: STRING;
	sOuterNum			: STRING;
	sPackCode			: STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
stProductInstruction.nOutersPerCase		:= 50;
stProductInstruction.nPacksPerOuter 	:= 10;

stCACData.NumberOfOuters	:= 50;


FOR iOuter := 1 TO stProductInstruction.nOutersPerCase DO
	(* Ustaw outer *)
	stCACData.Outer[iOuter].Barcode    := CONCAT('OUTER', INT_TO_STRING(iOuter));
	stCACData.Outer[iOuter].OuterCodeStatus := 5;
	
	stCACData.Outer[iOuter].OuterRejectID	:= 0;
	
	
	FOR iPack := 1 TO stProductInstruction.nPacksPerOuter DO
		(* Pack number z zerami *)
		sPackNum := CONCAT('0', INT_TO_STRING(iPack));  (* dla 1-9: '01'-'09' *)
		IF iPack = 10 THEN
			sPackNum := '10';
		END_IF;
		
		(* Outer number z zerami dla 1-9 *)
		sOuterNum := CONCAT('0', INT_TO_STRING(iOuter));
		IF iOuter >= 10 THEN
			sOuterNum := INT_TO_STRING(iOuter);
		END_IF;
		
		(* Sklej pack code *)
		sPackCode := CONCAT(CONCAT('PACK', sPackNum), CONCAT('OUTER', sOuterNum));
		
		(* Przypisz *)
		stCACData.Outer[iOuter].PackCode[iPack]			:= sPackCode;
		stCACData.Outer[iOuter].PackCodeStatus[iPack]	:= 5;
		stCACData.Outer[iOuter].PackRejectID[iPack]		:= 0;
		
	END_FOR;
END_FOR;	
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>